--- a/css/resume.css
+++ b/css/resume.css
@@ -483,7 +483,7 @@ body {
 @media print {
     * {
         -webkit-print-color-adjust: exact !important;
-        color-adjust: exact !important;
+        print-color-adjust: exact !important;
         print-color-adjust: exact !important;
     }
 
